--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/prompt-sync": "^4.2.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
   }
 }
