--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "poo-aula05",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/prompt-sync": "^4.2.3"
+    "@types/jest": "^29.5.13",
+    "@types/prompt-sync": "^4.2.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
